--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <h5 class="card-title"> Appများကို ဝယ်ယူသုံးနိုင်ရန် အောက်ပါအတိုင်း ဆက်သွယ်နိုင်ပါသည်။ </h5>
           <p class="card-text">
             <a href="tel:09950141131">ဖုန်း - 09950141131</a> <br> <br>
-            <a href="https://www.facebook.com/twodexcel">Facebook Page Name - Twod Excel</a>
+            <a href="https://www.facebook.com/twodexcel">Facebook Page  - Twod Excel</a>
 
 
           </p>
