--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ rel="stylesheet"
   
 }
 
-.phone:hover{
+/* .phone:hover{
   animation: cssAnimation_0 959ms 2 ease;
   
 
-}
+} */
 
 .computerback {
   padding: 15px 25px;
@@ -144,6 +144,12 @@ rel="stylesheet"
   filter: drop-shadow(0 0 20px #db3eb1) contrast(2) brightness(2);
 } */
 
+.navbar{
+  position:fixed;
+  left: 0px;
+  right: 0px;
+  z-index: 1;
+}
 
       
     </style>
@@ -152,7 +158,7 @@ rel="stylesheet"
    
    
     <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-dark ">
+<nav id="nav" class="navbar navbar-expand-lg navbar-light bg-dark ">
     <!-- Container wrapper -->
     <div class="container-fluid">
       <!-- Toggle button -->
@@ -429,6 +435,27 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"
 //   window.onscroll = function () {
 //     _audio.pause();
 // };
+
+let nav = document.getElementById("nav")
+
+// Initial state
+var scrollPos = 0;
+// adding scroll event
+window.addEventListener('scroll', function(){
+  // detects new state and compares it with the new one
+  if ((document.body.getBoundingClientRect()).top > scrollPos)
+nav.style.zIndex = 1;
+  
+  // alert("up")
+	else
+    nav.style.zIndex = -1;
+    // alert("down")
+
+
+	// saves the new position for iteration.
+	scrollPos = (document.body.getBoundingClientRect()).top;
+});
+
 </script>
 </body>
 </html>
