--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ rel="stylesheet"
     <div class="row p-4">
         <div class="col-md-6 text-left col-12">
             <br class="mt-5">
-            <p class="h1 title text-white mt-3">Welcome To <br> Twod Excel</p>
+            <p class="h1 title text-white mt-3">Welcome To <br> Twod Excel Pro</p>
             <p class="text-white mt-4 text-left">
                 2d ဂဏန်းတွေအတွက် စာရင်းအင်းတွေကို စာရွက်နဲ့ဘဲ ချတွက်နေရတာ အဆင်မပြေဖြစ်နေပြီလား။
 
