--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:image" content="/images/phone.png" />
-
+  <meta name="description"
+    content="2D, 3D ဒိုင်များအတွက် စာရင်းအင်းများကို လွယ်ကူမြန်ဆန်စွာ တွက်ချက်ပေးနိုင်သော Twod Excel Android Ledger Software ကို အခုပဲ ဒေါင်းလုဒ်ဆွဲလိုက်ပါ။">
+  <meta property="og:title" content="Twod Excel - 2D, 3D ဒိုင်ကိုင် Ledger App" />
   <meta property="og:description"
-    content="2D,3D ထိုးစာရင်းများကို တွက်ချက်နေရသော ဒိုင်များအတွက် ရိုးရှင်းလွယ်ကူပြီး အလုပ်ဖြစ်တဲ့ Ledger App">
-
-  <meta property="og:title" content="Twod Excel Application Download Now" />
+    content="2D, 3D ဒိုင်များအတွက် စာရင်းအင်းများကို လွယ်ကူမြန်ဆန်စွာ တွက်ချက်ပေးနိုင်သော Twod Excel Android Ledger Software ကို အခုပဲ ဒေါင်းလုဒ်ဆွဲလိုက်ပါ။">
 
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -19,13 +19,40 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <!-- MDB -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css" rel="stylesheet" />
-  <title>Twod Excel Pro Download Page</title>
+  <title>Twod Excel App - 2D, 3D ဒိုင်ကိုင် Android Ledger Software (Download)</title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style2.css">
   <link rel="stylesheet" href="style3.css">
-
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Twod Excel App",
+  "operatingSystem": "ANDROID",
+  "applicationCategory": "BusinessApplication",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "ratingCount": "150"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "5000",
+    "priceCurrency": "MMK"
+  }
+}
+</script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FGMXWVGTK2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-FGMXWVGTK2');
+</script>
 
 <body>
 
@@ -45,8 +72,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Navbar brand -->
         <a class="navbar-brand mt-2 mt-lg-0" href="#">
-          <img src="/images/Twod Excel.png" height="25" alt="MDB Logo" loading="lazy" />
-          <span class="text-white">Twod Excel Pro</span>
+          <img src="/images/Twod Excel.png" height="25" alt="Twod Excel App Logo" loading="lazy" />
+          <span class="text-white">Twod Excel</span>
         </a>
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,15 +89,15 @@
       <!-- Right elements -->
       <div class="d-flex align-items-center">
         <!-- Icon -->
-         <a class="text-reset me-3" href="https://www.facebook.com/twodexcel" target="_blank">
+        <a class="text-reset me-3" href="https://www.facebook.com/twodexcel" target="_blank">
           <span class="text-white">Facebook</span>
         </a>
         <a class="text-reset me-3" href="https://www.youtube.com/@twodexcel" target="_blank">
           <span class="text-white">Youtube</span>
         </a>
         <a class="text-reset me-3" href="https://fb.watch/hfQy027Lxx/">
-          <img src="/images/Threed Note.png" height="25" alt="MDB Logo" loading="lazy" />
-          <span class="text-white">Note Pro</span>
+          <img src="/images/Threed Note.png" height="25" alt="3D Note Pro App Logo" loading="lazy" />
+          <span class="text-white">3D Note Pro</span>
         </a>
 
       </div>
@@ -86,7 +113,7 @@
         <div class="col-md-6 text-left col-12">
           <br class="mt-5">
           <br class="mt-5">
-          <p class="h1 title text-white mt-3">Welcome To <br> Twod Excel Pro</p>
+          <h1 class="title text-white mt-3">Welcome To <br> Twod Excel App</h1>
           <p class="text-white mt-4 text-left">
             မိတ်ဆွေရဲ့ 2d စာရင်းအင်းတွေကို လွယ်ကူမြန်ဆန်စွာ ကူညီတွက်ချက်ပေးနိုင်ဖို့ အဆင်သင့်ဖြစ်နေတဲ့ Twod Excel လေးကို
             ယခုပဲ Download ဆွဲယူသုံးစွဲနိင်ပါပြီခင်ဗျာ။ </p>
@@ -106,13 +133,15 @@
               (VPN လိုတက်ပါသည်။)</a>
             <br><br>
             <marquee class="blink">
-              <span class="text-white mt-3 fs-2 fw-bold"> Ph & Viber - 09258887702, 09950141131 </span>
+              <span class="text-white mt-3 fs-2 fw-bold"> Ph & Viber - <a href="tel:09258887702">09258887702</a>, <a
+                  href="tel:09950141131">09950141131</a> </span>
             </marquee>
           </div>
 
         </div>
         <div class="col-md-6 text-center imgback col-12 blink">
-          <img width="260px" class="mt-5 phone" src="/images/phone.png" alt="twod excel preview photo">
+          <img width="260px" class="mt-5 phone" src="/images/phone.png"
+            alt="Twod Excel App အသုံးပြုပုံကို ဖုန်းတွင်ပြသထားပုံ">
         </div>
       </div>
     </div>
@@ -122,7 +151,7 @@
   <section style="background:url('images/background.jpg');background-size:cover;background-repeat: no-repeat;">
     <div class="container text-black vip-section">
       <div class="row mt-5">
-        <h2>Twod စားရင်းကိုင် VIP Plans များ</h2>
+        <h2>Twod Excel VIP Plan များ</h2>
       </div>
       <div class="row">
         <div class="col-md-3 text-left col-12">
@@ -181,7 +210,7 @@
         </div>
       </div>
       <div class="row mt-5 features-section">
-        <h2>✨ အသုံးချထားသော စနစ်များ</h2>
+        <h2>✨ Twod Excel App ၏ အဓိက Features များ</h2>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-3 text-left col-12">
@@ -262,6 +291,27 @@
 
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="faq-section">
+    <div class="container">
+      <h2 style="text-decoration:underline;" class=" mb-5">အမေးများသော မေးခွန်းများ (FAQ)</h2>
+      <h3>Twod Excel App ဆိုတာဘာလဲ။</h3>
+      <p>Twod Excel App ဆိုသည်မှာ 2D, 3D ဒိုင်များအတွက် အရောင်းစာရင်း၊ အရှုံးအမြတ် စသည်တို့ကို လွယ်ကူစွာ
+        တွက်ချက်နိုင်ရန် ပြုလုပ်ထားသော ledger application ဖြစ်ပါသည်။</p>
+      <h3>ဒီ App ကိုသုံးဖို့ အင်တာနက်လိုပါသလား။</h3>
+      <p>Application ကို အသုံးပြုရန် အင်တာနက်မလိုအပ်ပါ။ VIP License စစ်ဆေးရန်အတွက်သာ အင်တာနက် လိုအပ်ပါသည်။</p>
+      <h3>Computer မှာ သုံးလို့ရပါသလား။</h3>
+      <p>Computer တွင် တိုက်ရိုက်အသုံးပြု၍မရပါ။ သို့သော် BlueStacks, NoxPlayer ကဲ့သို့သော Android Emulator များကြားခံ၍
+        အသုံးပြုနိုင်ပါသည်။</p>
+      <h3>အစမ်းသုံးလို့ရလား။</h3>
+      <p>ဟုတ်ကဲ့ရပါတယ်ဗျ တစ်ပတ်စာ ၅၀၀၀ကျပ်နဲ့ စတင်စမ်းသုံးလို့ရပါတယ်ဗျ။</p>
+      <h3>ဖုန်းရော Change ပေးလား</h3>
+      <p>ဝယ်ထားတဲ့ သက်သေသေချာပြပေးနိုင်ရင် ဝန်ဆောင်ခအနည်းငယ်ဖြင့် ဖုန်းပြောင်းလဲပြီးသုံးနိုင်အောင် လုပ်ပေးပါတယ်ဗျ။</p>
+      <h3>ဘယ်လို ဆက်သွယ်နိုင်လဲ</h3>
+      <p>ဖုန်းနံပါတ် 09258887702, 09950141131 သို့ ဆက်သွယ်နိုင်ပါသည်။ viber လည်းရှိပါသည်။ သို့မဟုတ် Twod Excel Facebook
+        Page Messenger မှာလည်း လာမေးနနိုင်ပါတယ်ဗျ။ </p>
     </div>
   </section>
 
